--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "firebase": "^9.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^3.1.4",
+    "react-loading-skeleton": "^3.1.0",
     "react-router-dom": "^6.4.2",
     "styled-components": "^5.3.6",
     "use-local-storage": "^2.3.6"
