--- a/package.json
+++ b/package.json
@@ -9,11 +9,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.2",
+    "@mui/styled-engine-sc": "^5.11.0",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "firebase": "^9.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^3.1.4",
+    "react-icons": "^4.7.1",
+    "react-icons-kit": "^2.0.0",
     "react-loading-skeleton": "^3.1.0",
+    "react-paginate": "^8.1.4",
     "react-router-dom": "^6.4.2",
     "styled-components": "^5.3.6",
     "use-local-storage": "^2.3.6"
